src/scrollview/assets/scrollview-scrollbars-core.css
.yui3-scrollview-scrollbar {
    opacity: 0;     
    position: absolute; 
    width: 6px; 
    height: 10px;
}

.yui3-scrollview-scrollbar.yui3-scrollview-vertical { 
    top: 0; 
    right: 1px; 
}

.yui3-scrollview-scrollbar.yui3-scrollview-horizontal { 
    height: 8px; 
    width: 20px; 
    bottom: 1px; 
    left: 0; 
}

.yui3-scrollview-scrollbar .yui3-scrollview-top,
.yui3-scrollview-scrollbar .yui3-scrollview-bottom, 
.yui3-scrollview-scrollbar .yui3-scrollview-middle { 
    position: absolute; 
    right: 0px; 
    display: block; 
    width: 100%; 
    height: 4px;  
}

.yui3-scrollview-scrollbar .yui3-scrollview-top { 
    top: 0; 
}

.yui3-scrollview-scrollbar .yui3-scrollview-bottom { 
    bottom: 0; 
}

.yui3-scrollview-scrollbar .yui3-scrollview-middle {
    display: -moz-inline-stack; 
    display: inline-block;
    position: absolute; 
    top: 4px; 
    height: 1px;
}

.yui3-scrollview-scrollbar.yui3-scrollview-horizontal > .yui3-scrollview-child { 
    display: inline-block; 
    top: 0; 
    left: 0; 
    bottom: auto; 
    right: auto;  
}

.yui3-scrollview-scrollbar.yui3-scrollview-horizontal .yui3-scrollview-top,
.yui3-scrollview-scrollbar.yui3-scrollview-horizontal .yui3-scrollview-bottom { 
    width: 4px; 
    height: 6px; 
}

.yui3-scrollview-scrollbar.yui3-scrollview-horizontal .yui3-scrollview-middle { 
    top: auto;
    left: 4px; 
    width: 1px; 
    height: 6px;
}

